Fix footer appearance on mobile

--- a/course-project/scss/_footer.scss
+++ b/course-project/scss/_footer.scss
@@ -10,12 +10,8 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 2.25rem;
     color: #fff;
-
-    // padding: 36px 40px 40px;
-    // padding-left: 68px;
-    // padding-right: 68px;
   }
 
   .footer-left {
