--- a/course-project/scss/_home.scss
+++ b/course-project/scss/_home.scss
@@ -29,7 +29,3 @@
   padding-top: 8rem !important;
   margin-bottom: 8rem;
 }
-
-footer {
-  display: none;
-}
